[project]
name = "lfsutils"
version = "1.0.2"
authors = [
  { name="Gabriele Iannetti", email="g.iannetti@gsi.de" },
]
description = "A Utility Library and CLI Tool for the Lustre filesystem"
license = "GPL-3.0"
readme = "README.md"
requires-python = ">=3.10.0"
dependencies = [
  "ClusterShell>=1.8.4",
  "PyYAML>=5.4.1",
]
keywords = ["lustre", "utility"]
classifiers = [
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX",
    "Topic :: Utilities",
    "Topic :: System :: Filesystems",
]

[project.urls]
Homepage = "https://github.com/GSI-HPC/lfs-utils"
Repository = "https://github.com/GSI-HPC/lfs-utils"

[project.scripts]
lfsutils-cli = "lfsutils.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
